# ai-edge-apis

./: .bazelrc  .gitignore  BUILD  Dockerfile  MODULE.bazel  README.md  WORKSPACE  extensions.bzl  function_calling.bzl  rag_pipeline.bzl  requirements.txt  requirements_lock.txt
examples/: .gitignore
examples/function_calling/healthcare_form_demo/: README.md  local.properties  settings.gradle.kts
examples/function_calling/healthcare_form_demo/app/: build.gradle.kts
examples/function_calling/healthcare_form_demo/app/src/androidTest/java/com/google/sample/fcdemo/: ExampleInstrumentedTest.kt
examples/function_calling/healthcare_form_demo/app/src/main/: AndroidManifest.xml
examples/function_calling/healthcare_form_demo/app/src/main/assets/: animated_audio_feedback.json  audio_feedback.json
examples/function_calling/healthcare_form_demo/app/src/main/java/com/google/sample/fcdemo/: FcDemoApp.kt
examples/function_calling/healthcare_form_demo/app/src/main/res/drawable/: audio_feedback_inactive.xml  baseline_mic_24.xml
examples/function_calling/healthcare_form_demo/app/src/main/res/font/: product_name.xml
examples/function_calling/healthcare_form_demo/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
examples/function_calling/healthcare_form_demo/app/src/main/res/values/: strings.xml  themes.xml
examples/function_calling/healthcare_form_demo/gradle/: libs.versions.toml
examples/function_calling/healthcare_form_demo/gradle/wrapper/: gradle-wrapper.properties
examples/rag/: README.md
examples/rag/android/: build.gradle.kts  settings.gradle.kts
examples/rag/android/app/: build.gradle.kts
examples/rag/android/app/src/main/: AndroidManifest.xml
litert_tools/: README.md  __init__.py  pyproject.toml  requirements.txt  version.py
litert_tools/litert_tools/: __init__.py
litert_tools/litert_tools/pipeline/: BUILD  __init__.py  llm_parameters.proto  model_downloader.py  pipeline.py  prompt_template.py  task_file_processor.py  tokenizer.py
litert_tools/pipeline/python/: BUILD  llm_parameters.proto  pipeline.py
litertlm_tools/pipeline/python/: llm_parameters.proto  model_downloader.py  pipeline.py  task_file_processor.py  tokenizer.py
local_agents/core/proto/: BUILD  build_config.bzl  content.proto  generative_service.proto
local_agents/function_calling/: README.md
local_agents/function_calling/core/: BUILD  format_utils.cc  format_utils.h  gemma_formatter.cc  gemma_formatter.h  hammer_formatter.cc  hammer_formatter.h  llama_formatter.cc  llama_formatter.h  model_formatter.h  streaming.cc  streaming.h  streaming_llm_engine.cc  streaming_llm_engine.h
local_agents/function_calling/core/antlr/: AntlrPythonParser.g4  BUILD  parser_utils.cc  parser_utils.h
local_agents/function_calling/core/proto/: BUILD  constraint_options.proto  model_formatter_options.proto
local_agents/function_calling/java/com/google/ai/edge/localagents/fc/: BUILD  ChatSession.java  ConstraintProvider.java  FstConstraintProvider.java  FunctionCallException.java  GemmaFormatter.java  GenerativeModel.java  HammerFormatter.java  InferenceBackend.java  LlamaFormatter.java  LlmInferenceBackend.java  LlmInferenceBackendSession.java  ModelFormatter.java  ModelFormatterOptions.java  Session.java
local_agents/function_calling/java/com/google/ai/edge/localagents/fc/toolretrieval/: BUILD  DefaultToolFormatter.java  DefaultToolRetrievalClient.java  ToolFormatter.java  ToolMetadata.java  ToolRetrieval.java
local_agents/function_calling/jni/: BUILD  jni_gemma_formatter.cc  jni_hammer_formatter.cc  jni_llama_formatter.cc  jni_utils.cc  jni_utils.h
local_agents/function_calling/tool_simulation/: README.md  README_PYPI.md  pyproject.toml  requirements.txt
local_agents/function_calling/tool_simulation/demo/: Demo_Hammer_FT.ipynb  Demo_ToolSimulation_Data_and_Eval_Example.ipynb  README.md
local_agents/function_calling/tool_simulation/tool_simulation/core/: base_prompt_builder.py
local_agents/litertlm_tools/: requirements.txt
local_agents/litertlm_tools/litertlm_tools/: BUILD  __init__.py  model_downloader.py  pipeline.py  tokenizer.py
local_agents/rag/: BUILD  README.md
local_agents/rag/core/models/: BUILD  base_language_model.h  base_text_embedding_model.h
local_agents/rag/core/protos/: BUILD  build_config.bzl  embedding_models.proto  language_models.proto  memory.proto  retrieval.proto  vector_stores.proto
local_agents/rag/java/com/google/ai/edge/localagents/rag/: BUILD
local_agents/rag/java/com/google/ai/edge/localagents/rag/chains/: BUILD  Chain.java  ChainConfig.java  RetrievalAndInferenceChain.java  RetrievalChain.java
local_agents/rag/java/com/google/ai/edge/localagents/rag/chunking/: BUILD  TextChunker.java
local_agents/rag/java/com/google/ai/edge/localagents/rag/memory/: BUILD  ColumnConfig.java  DefaultSemanticTextMemory.java  DefaultVectorStore.java  SemanticMemory.java  SqliteVectorStore.java  TableConfig.java  VectorStore.java  VectorStoreRecord.java
local_agents/rag/java/com/google/ai/edge/localagents/rag/models/: AiCoreTextEmbeddingModel.java  AsyncProgressListener.java  BUILD  EmbedData.java  Embedder.java  EmbedderAdapter.java  EmbeddingDataProcessor.java  EmbeddingRequest.java  GeckoEmbeddingDataProcessor.java  GeckoEmbeddingModel.java  GeminiEmbedder.java  GemmaEmbeddingModel.java  LanguageModel.java  LanguageModelRequest.java  LanguageModelResponse.java  MediaPipeLlmBackend.java  Part.java
local_agents/rag/java/com/google/ai/edge/localagents/rag/prompt/: BUILD  PromptBuilder.java
local_agents/rag/java/com/google/ai/edge/localagents/rag/retrieval/: BUILD  BaseRetriever.java  RetrievalConfig.java  RetrievalEntity.java  RetrievalRequest.java  RetrievalResponse.java  SemanticDataEntry.java
local_agents/rag/java/com/google/ai/edge/localagents/rag/shared/: BUILD  KeyValuePair.java  Metadata.java  VectorOperations.java
local_agents/rag/maven/: BUILD  maven_artifact.sh  maven_repository.bzl
local_agents/utils/core/: BUILD  ret_check.cc  ret_check.h  source_location.h  status_builder.cc  status_builder.h  status_macros.h
(+29 files in other folders)
